welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:8: error: not found: value baggle
  	baggle += 1
        ^